[workspace] 
members = [
    "sheep_nucleus",
    "algorithm", 
]

# cargo 的构建模式分为 dev, release, test, bench
# cargo build, run, check rustc 自动使用dev
# cargo test 和 bench 使用 test 和 bench
# cargo install 使用 release
# 参考 https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 2

[profile.release]
debug = true

[profile.test] # inherits dev

[profile.bench] # inherits release