[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = { git = "https://github.com/rcore-os/buddy_system_allocator"} 
lazy_static = {version = "1.4.0", features = ["spin_no_std"]} 
spin = "0.5.2" 
algorithm = { path = "../algorithm" } 

[features] 
time_enabled = [] 