[package]
name = "sheep_nucleus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = { git = "https://github.com/rcore-os/buddy_system_allocator"} 
lazy_static = {version = "1.4.0", features = ["spin_no_std"]} 
spin = "0.5.2" 
algorithm = { path = "../algorithm" }
log = "0.4.8"
bitflags = "1.2.1" 
bit_field = "0.10.0"
hashbrown = "0.7.2"
#colored = "2.0.0"

[features] 
default = ["cutie-log"]
time-disabled = []
sv47 = []
twocat-log-debug-itself = [] 
cutie-io-backup = []
cutie-custom-mapping = [] 
cutie-log-process = []
cutie-log = []
cutie-log-memory = [] 
# cutie-support-memory-mapping = [] 
